@@ -5,7 +5,7 @@ ACLOCAL_AMFLAGS=-I m4
 
 EXTRA_DIST=schema_tests test_valgrind
 
-check_PROGRAMS=test_avro_schema test_avro_data test_cpp
+check_PROGRAMS=test_avro_schema test_avro_schema_names test_avro_data test_cpp
 
 noinst_PROGRAMS=generate_interop_data test_interop_data
 
@@ -13,6 +13,9 @@ test_LDADD=$(top_builddir)/src/libavro.la
 
 test_avro_schema_SOURCES=test_avro_schema.c
 test_avro_schema_LDADD=$(test_LDADD)
+
+test_avro_schema_names_SOURCES=test_avro_schema_names.c
+test_avro_schema_names_LDADD=$(test_LDADD)
 
 test_avro_data_SOURCES=test_avro_data.c
 test_avro_data_LDADD=$(test_LDADD)
