@@ -88,6 +88,9 @@ Avro 1.5.0 (unreleased)
     AVRO-719. Java: Permit MapReduce programs to alter output file
     sync interval.  (Joe Crobak via cutting)
 
+    AVRO-725. C: avro_schema_get_subschema function. (Douglas Creager via
+    brucem)
+
   BUG FIXES
 
     AVRO-675. C: Bytes and fixed setters don't update datum size.
